# striker

./: Makefile  pyproject.toml  tox.ini
.github/workflows/: build.yml
striker/: __init__.py  _cli.py  _engine.py  _parameter.py
striker/core/: __init__.py  _protocol.py  _weakref.py
striker/core/_base/: _base.py  _manager.py
striker/core/hook/: _factory.py  _hook.py  _manager.py  _parent.py
striker/core/mixin/: __init__.py  _data.py  _engine.py  _loop.py  _manager.py  _mixin.py  _parent.py
striker/core/plugin/: __init__.py  _manager.py  _parent.py  _plugin.py
striker/mixins/: data_property.py  engine_test.py  engine_train.py  engine_trainvalidation.py  loop_batchtrain.py  loop_minibatchtrain.py  loop_test.py
striker/plugins/: backup.py  device.py  log.py  progress.py  quit.py
tests/: test_hook.py  test_mixin.py  test_parameter.py  test_plugin.py
