[tool.poetry]
name = "striker"
version = "0.1.0"
description = "Minimal and Modular PyTorch Framework"
authors = ["0phoff <0phoff@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = [
    { markers = "sys_platform == 'linux'", url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp39-cp39-linux_x86_64.whl" },
    { markers = "sys_platform == 'win32'", url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp39-cp39-win_amd64.whl" },
]
rich = { version = "~12.5", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
mypy = "^0.971"
flake8 = "^5.0.4"
flake8-bugbear = "^22.8.23"
flake8-comprehensions = "^3.10.0"
flake8-eradicate = "^1.3.0"
flake8-commas = "^2.1.0"
flake8-quotes = "^3.3.1"
flake8-simplify = "^0.19.3"

[tool.mypy]
follow_imports = 'silent'
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
