[tool.poetry]
name = "striker"
version = "0.0.0"
description = "Minimal and Modular PyTorch Framework"
authors = ["0phoff <0phoff@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

# Required dependencies
typeguard = "^2.13.3"
torch = "^1.12.1"

# Optional dependencies
rich = { version = "~12.5", optional = true }
rich-argparse = { version = "^0.2.1", optional = true }

[tool.poetry.extras]
rich = ["rich", "rich-argparse"]

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
mypy = "^0.971"
flake8 = "^5.0.4"
flake8-bugbear = "^22.8.23"
flake8-comprehensions = "^3.10.0"
flake8-eradicate = "^1.3.0"
flake8-commas = "^2.1.0"
flake8-quotes = "^3.3.1"
flake8-simplify = "^0.19.3"

[tool.mypy]
follow_imports = 'silent'
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
dirty = true
style = "pep440"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
